--- a/src/styles/Rates.scss
+++ b/src/styles/Rates.scss
@@ -54,7 +54,7 @@
     }
   }
 }
-@media (max-width: 425px){
+@media (max-width: 625px){
   &-item{
     flex-direction: column;
 
